Finalizei o desenvolvimento do upload de imagens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=DoacaoDePlantas
+
+#Usado para permitir o upload de imagens mais pesadas
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
