--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.mail.username=pedrodevbackend@gmail.com
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Comando para acessar o servidor via dispositivo conectado a mesma rede
+#Como acessar em outro dispositivo: http://192.168.200.92:8080/inicio
+#server.address=0.0.0.0
+#server.port=8080
