Comecei a desenvolver a lógica responsavel pela doação de plantas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.mail.port=587
 spring.mail.username=pedrodevbackend@gmail.com
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=tru
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Comando para acessar o servidor via dispositivo conectado a mesma rede
 #Como acessar em outro dispositivo: http://192.168.200.92:8080/inicio
