--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.application.name=DoacaoDePlantas
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#Configurações usadas para enviar emails com o Spring Boot
+#ConfiguraÃ§Ãµes usadas para enviar emails com o Spring Boot
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=pedrodevbackend@gmail.com
-spring.mail.password=qetb gurx hwwl wfdd
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
